feat(order): check if order is paid
