# src/main/routes/order-routes.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import { Repository } from '../../core/domain/repositories/repository';
 import {
   makeAddOneOrderHttpController,
+  makeCheckOrderIsPaidHttpController,
   makeFindOrdersHttpController,
   makeUpdateOrderStatusHttpController,
 } from '../factories/order-factories';
@@ -10,6 +11,10 @@ import { adaptRoute } from './route';
 export const orderRoutes = (router: Router, repository: Repository) => {
   router.post('/orders', adaptRoute(makeAddOneOrderHttpController(repository)));
   router.get('/orders', adaptRoute(makeFindOrdersHttpController(repository)));
+  router.get(
+    '/orders/:id/paid',
+    adaptRoute(makeCheckOrderIsPaidHttpController(repository)),
+  );
   router.patch(
     '/orders/:id/status',
     adaptRoute(makeUpdateOrderStatusHttpController(repository)),
